<resources>
    <string name="app_name">Profile page</string>
    <string name="hello">Hello</string>
    <string name="settings">Settings</string>
    <string name="Settings">SETTINGS</string>
    <string name="search_for">Search For......</string>
    <string name="notifications">Notifications</string>
    <string name="night_mode">Night Mode</string>
    <string name="account">Account</string>
    <string name="help_and_support">Help and Support</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="report">Report</string>
    <string name="log_out">Log Out</string>
    <string name="Account">Account</string>
    <string name="language">Language</string>
    <string name="todo">todo</string>
    <string name="buy_product">Buy Product</string>
    <string name="chat">Chat</string>
    <string name="my_orders">My Orders</string>
    <string name="sell_product">Sell Product</string>
    <string name="view_cart">View Cart</string>
    <string name="help">Help</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Password">Password</string>
    <string name="username">username</string>
    <string name="full_name">Full Name</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="address">Address</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_password">Create Password</string>
</resources>