<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity"
    android:background="@drawable/bg2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/scrollView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/Password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/old_password"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif"/>

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="old password"
                    android:labelFor="@id/editTextTextPassword"
                    android:ems="10"
                    android:hint="@string/old_password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif"/>

                <EditText
                    android:id="@+id/editTextTextPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="new password"
                    android:labelFor="@id/editTextTextPassword"
                    android:ems="10"
                    android:hint="@string/new_password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/confirm_password"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextTextPassword3"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="confirm password"
                    android:labelFor="@id/editTextTextPassword"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textStyle="bold"
                android:textColor="#015a6b"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:padding="15dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>