<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#73ccd8"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/Settings"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_margin="10sp"
                    android:background="@drawable/white_background"
                    android:drawableStart="@drawable/outline_manage_search_24"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/search_for" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView11"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="12dp"
                        android:src="@drawable/baseline_notifications_24" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/imageView11"
                        android:letterSpacing="0.05"
                        android:text="@string/notifications"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Switch
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        tools:ignore="UseSwitchCompatOrMaterialXml"
                        android:theme="@style/notification_switch"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView12"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="12dp"
                        android:src="@drawable/baseline_dark_mode_24" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/imageView12"
                        android:letterSpacing="0.05"
                        android:text="@string/night_mode"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Switch
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        tools:ignore="UseSwitchCompatOrMaterialXml"
                        android:theme="@style/night_mode"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView13"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="12dp"
                        android:src="@drawable/baseline_account_box_24" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/imageView13"
                        android:letterSpacing="0.05"
                        android:text="@string/account"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView14"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="12dp"
                        android:src="@drawable/baseline_lock_24" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/imageView14"
                        android:letterSpacing="0.05"
                        android:text="@string/privacy_and_security"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView15"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="12dp"
                        android:src="@drawable/baseline_help_center_24" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/imageView15"
                        android:letterSpacing="0.05"
                        android:text="@string/help_and_support"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView16"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="12dp"
                        android:src="@drawable/baseline_person_add_24" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/imageView16"
                        android:letterSpacing="0.05"
                        android:text="@string/invite_a_friend"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView17"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="12dp"
                        android:src="@drawable/baseline_report_24" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/imageView17"
                        android:letterSpacing="0.05"
                        android:text="@string/report"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"/>

                </RelativeLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textStyle="bold|italic"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:padding="15dp"
                android:textAllCaps="true"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>